chenge backend and add frontend set up